# py_document_chunker

./: .dockerignore  .pre-commit-config.yaml  CI_CD_STRATEGY.md  Dockerfile  chunk_documents.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml  python-tests.yml
docs/: CI_CD_STRATEGY.md
src/py_document_chunker/: base.py  tokenizers.py
src/py_document_chunker/strategies/: fixed_size.py  sentence.py
tests/: test_base.py  test_code.py  test_code_java.py  test_core.py  test_langchain.py  test_llamaindex.py  test_markdown_hierarchical.py  test_markdown_new.py  test_runt_handling.py  test_semantic.py  test_semantic_complex.py  test_semantic_fallback.py  test_sentence.py  test_spacy_sentence.py  test_tokenizers.py
