[tool.poetry]
name = "py_document_chunker"
version = "0.3.0"
description = "A state-of-the-art Python package for advanced text segmentation (chunking)."
authors = ["Gowtham Rao <rao@ohdsi.org>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/OHDSI/py_document_chunker"
repository = "https://github.com/OHDSI/py_document_chunker"
keywords = ["text chunking", "text splitting", "RAG", "Retrieval-Augmented Generation", "NLP", "natural language processing", "document processing", "langchain", "llamaindex"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = ">=4.12.3"
lxml = ">=5.2.0"
nltk = { version = ">3.8.1", optional = true }
spacy = { version = "==3.7.2", optional = true }
numpy = { version = "<2.0.0", optional = true }
"tree-sitter" = { version = ">=0.21.0", optional = true }
"tree-sitter-language-pack" = { version = ">=0.3.0", optional = true }
"markdown-it-py" = { version = ">=3.0.0", optional = true }
html5lib = { version = ">=1.1", optional = true }
"langchain-core" = { optional = true, version = "*" }
"llama-index-core" = { version = ">=0.12.29", optional = true }
tiktoken = { version = ">=0.7.0", optional = true }


[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
black = ">=24.0.0"
ruff = ">=0.1.0"
pre-commit = ">=3.0.0"
mypy = ">=1.0"

[tool.poetry.extras]
nlp = ["nltk"]
spacy = ["spacy"]
semantic = ["numpy"]
code = ["tree-sitter", "tree-sitter-language-pack"]
markdown = ["markdown-it-py"]
html = ["html5lib"]
langchain = ["langchain-core"]
llamaindex = ["llama-index-core"]
tokenizers = ["tiktoken"]
all = ["nltk", "spacy", "numpy", "tree-sitter", "tree-sitter-language-pack", "markdown-it-py", "html5lib", "langchain-core", "llama-index-core", "tiktoken"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]